优化笔记显示

--- a/templates/note.html
+++ b/templates/note.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="../static/src/assets/css/demo.css">
 <!--    <script src="../static/src/m_js/write.js"></script>-->
     <link rel="stylesheet" href="../static/src/assets/css/fonts.css">
+<!--    highlight代码高亮-->
+<!--    <link rel="stylesheet" href="../static/src/assets/css/default.css">-->
 </head>
 
 <!--<body onload="initPage()">-->
@@ -645,7 +647,7 @@
                                     <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                                          aria-labelledby="pills-profile-tab">
                                         <input type="hidden" id="preview-input">
-                                         <div id="preview" class="" style="margin: 20px;">
+                                         <div id="preview" class="markdown-body editormd-preview-container" previewcontainer="true" style="margin: 20px;">
                                         <!--                                            这里展示预览内容-->
                                     </div>
 
@@ -799,6 +801,10 @@
     <!-- End Custom template -->
 </div>
 </div>
+
+<!--highlight代码高亮-->
+<!--<script src="../static/src/assets/js/highlight.pack.js"></script>-->
+<!--<script>hljs.initHighlightingOnLoad();</script>-->
 
 
 <!--   Core JS Files   -->
