--- a/templates/share.html
+++ b/templates/share.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>忘记密码</title>
+    <title>分享笔记</title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
     <link rel="icon" href="../static/src/assets/img/icon.ico" type="image/x-icon"/>
 
@@ -58,19 +58,7 @@
         <!-- End Logo Header -->
 
         <!-- Navbar Header -->
-        <nav class="navbar navbar-header navbar-expand-lg">
 
-            <div class="container-fluid">
-
-                <!-- drop -->
-
-
-                <!-- drop -->
-                <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
-                   <a href="login.html"> <button class="btn btn-info">返回登录</button></a>
-                </ul>
-            </div>
-        </nav>
         <!-- End Navbar -->
     </div>
 
@@ -79,126 +67,27 @@
     <!-- End Sidebar -->
 
 
-    <div class="main-panel">
+    <div class="">
         <div class="content">
-            <div class="page-inner">
+            <div class="page-inner" style="padding-top: 100px;padding-left: 15%;padding-right: 15%;">
                 <!--					<h4 class="page-title">个人信息</h4>-->
                 <div class="row">
-                    <div class="col-md-8">
-
-                        <div class="card">
-                            <div class="card-header">
-                                <h4 class="card-title">修改密码</h4>
-                            </div>
-                            <div class="card-body">
-
-                                <div class="tab-content mt-2 mb-3" id="">
-
-                                    <div class="">
-                                        <div class="row mt-3">
-                                            <div class="col-md-12">
-                                                <div class="form-group form-group-default">
-                                                    <label>邮箱</label>
-
-
-                                                    <input type="email" id="email" class="form-control" value="" name=""
-                                                           placeholder="请输入注册时使用的邮箱">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="row mt-3">
-                                            <div class="col-md-12">
-                                                <div class="form-group form-group-default">
-                                                    <label>验证码</label>
-                                                    <button onclick="sendcode()" id="sendcodebtn"
-                                                            class="btn btn-info btn-xs"
-                                                            style="float: right;margin-top: px;">获取验证码
-                                                    </button>
-
-                                                    <input type="text" id="code" class="form-control" value="" name=""
-                                                           placeholder="请输入验证码">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-3 mb-1">
-                                            <div class="col-md-12">
-                                                <div class="form-group form-group-default">
-                                                    <label>新密码</label>
-                                                    <input type="text" id="psw" class="form-control" value="" name=""
-                                                           placeholder="请输入新密码">
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="text-right mt-3 mb-3">
-                                            <button onclick="modify_password()" class="btn btn-success">确认</button>
-
-                                        </div>
-                                    </div>
-                                    <!--										<div class="tab-pane fade" id="pills-contact-nobd" role="tabpanel" aria-labelledby="pills-contact-tab-nobd">-->
-                                    <!--											<p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>-->
-
-                                    <!--											<p> But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their</p>-->
-                                    <!--										</div>-->
-                                </div>
-                            </div>
-                        </div>
+                    <div>
+                        <h2><b>这是标题</b></h2>
                     </div>
-
+                    <div>
+                        <p>
+                            这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分
+                            这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分这皇帝回封IPwhip哇嘿嘿iO发hi为花覅Hi好被访问hifoe完毕部分
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <!-- Custom template | don't include it in your project! -->
-    <!--    <div class="custom-template" style="width: ;">-->
 
-    <!--        <div class="custom-toggle" style="height:105px ;padding: 0;background: none">-->
-    <!--            &lt;!&ndash; <i class="fas fa-file-import"></i> &ndash;&gt;-->
-    <!--            <ul class="nav nav-pills nav-secondary" id="pills-tab" role="tablist"-->
-    <!--                style="list-style-type: none;margin-left: 10px;margin-top:0px;">-->
-    <!--                <li>-->
-    <!--                    <button class="btn btn-secondary btn-sm" class="nav-link btn-xs active" id="pills-home-tab"-->
-    <!--                            data-toggle="pill"-->
-    <!--                            href="#pills-home"-->
-    <!--                            role="tab" aria-controls="pills-home" aria-selected="true">编辑-->
-    <!--                    </button>-->
-    <!--                </li>-->
-
-    <!--                <li>-->
-    <!--                    <button class="btn btn-info btn-sm" id="pills-profile-tab" data-toggle="pill"-->
-    <!--                            href="#pills-profile"-->
-    <!--                            role="tab" aria-controls="pills-profile" aria-selected="false"-->
-    <!--                            onclick="preview()">预览-->
-    <!--                    </button>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <button id="alert_demo_3_3" class="btn btn-success btn-sm">保存</button>-->
-    <!--                </li>-->
-
-    <!--                <li>-->
-    <!--                    <button id="pills-contact-tab" class="btn btn-danger btn-sm">删除</button>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <button onclick="getMD()" class="btn btn-default btn-sm">MD值</button>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <button onclick="getHtml()" class="btn btn-default btn-sm">Html</button>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <button onclick="setMD()" class="btn btn-default btn-sm">赋值</button>-->
-    <!--                </li>-->
-    <!--                &lt;!&ndash;                    <li><div class="icon-class">保存1</div></li>&ndash;&gt;-->
-
-    <!--            </ul>-->
-    <!--            &lt;!&ndash;                <div class="icon-class">保存1</div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                <div class="icon-class">保存1</div>&ndash;&gt;-->
-    <!--        </div>-->
-
-    <!--    </div>-->
-    <!-- End Custom template -->
 </div>
 </div>
 
