--- a/templates/write.html
+++ b/templates/write.html
@@ -570,9 +570,9 @@
                                         </select>
                                     </div>
 
-                                    <!--                                <button onclick="getMD()">获取markdown</button>-->
-                                    <!--                                <button onclick="getHtml()">获取Html</button>-->
-                                    <!--                                <button onclick="setMD()">赋值</button>-->
+                                                                    <button onclick="getMD()">获取markdown</button>
+                                                                    <button onclick="getHtml()">获取Html</button>
+                                                                    <button onclick="setMD()">赋值</button>
                                     <!--                                    </div>-->
 
                                 </div>
