修复editor找不到getValue()的bug-休眠

--- a/templates/note.html
+++ b/templates/note.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="../static/src/assets/editor.md-master/css/editormd.css"/>
     <script src="../static/src/assets/js/core/jquery.3.2.1.min.js"></script>
 
-    <script src="../static/src/assets/editor.md-master/editormd.js?v=1"></script>
+    <script src="../static/src/assets/editor.md-master/editormd.js"></script>
 
  <!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
     <!-- Fonts and icons -->
