--- a/templates/recycle.html
+++ b/templates/recycle.html
@@ -182,7 +182,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a class="see-all" href="/notecollection.html">查看全部<i
+                                <a class="see-all" href="/collection.html">查看全部<i
                                         class="fa fa-angle-right"></i> </a>
                             </li>
                         </ul>
